--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,15 +22,16 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Bring up the hub
+        run: docker-compose up -d
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+      - name: Npm install
+        run: npm install
+
+      - name: Run smashtest
+        run: npx smashtest --test-server=http://localhost:4444/wd/hub
+
+      - name: Stop hub
+        run: docker-compose down
