--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm install
 
       - name: Run smashtest
-        run: npx smashtest --test-server=http://localhost:4444/wd/hub
+        run: npx smashtest --test-server=http://localhost:4444/wd/hub --progress-bar=false
 
       - name: Stop hub
         run: docker-compose down
